# rust-threshold-secret-sharing

./: Cargo.toml
benches/: fields.rs  large.rs  mpc.rs  numtheory.rs  packed.rs  packed_share.rs  ramp.rs  shamir_share.rs  versus.rs
examples/: homomorphic.rs  mpc.rs  packed_paramgen.rs  shamir.rs
src/: lib.rs  packed.rs  shamir.rs
src/fields/: large.rs  large_gmp.rs  mod.rs  montgomery.rs  native.rs  natural.rs
src/numtheory/: basic.rs  euclid.rs  fft.rs  lagrange.rs  mod.rs  newton.rs
src/packed/: mod.rs  paramgen.rs
