[package]
name = "threshold-secret-sharing"
version = "0.3.0-pre"
authors = [
  "Morten Dahl <mortendahlcs@gmail.com>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of various threshold secret sharing schemes"
keywords = [
  "secret-sharing",
  "Shamir",
  "cryptography",
  "secure-computation",
  "mpc"
]
homepage = "https://github.com/snipsco/rust-threshold-secret-sharing"
documentation = "https://docs.rs/threshold-secret-sharing"
license = "MIT/Apache-2.0"
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "snipsco/rust-threshold-secret-sharing" }

[features]
paramgen = ["primal", "num-traits"]
largefield = ["framp"]
safety_override = []

[dependencies]
rand = "0.3.*"
framp = { version = "0.3", optional = true }
primal = { version = "0.2", optional = true }
num-traits = { version = "0.1", optional = true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "fields"
harness = false

[[bench]]
name = "packed"
harness = false

[[bench]]
name = "versus"
harness = false

[[bench]]
name = "packed_share"
harness = false

[[bench]]
name = "numtheory"
harness = false

[[bench]]
name = "mpc"
harness = false